--- a/test.html
+++ b/test.html
@@ -5,5 +5,27 @@
   <h2>HELLO,V2</h2>
   <h3>HELLO,V3</h3>
   <h1>W A D</h1>
+  <p>
+    PHP 调试 - 方式 - kikajack的博客 - CSDN博客
+2018年7月12日 - 之前学 Java 的时候,一直使用 IDE 的 console 控制台进行调试。后来搞 PHP 后...对于web 应用,要开启 Xdebug 调试模式,必须在浏览器发送的请求中添加...
+CSDN - 百度快照
+PHP: PHP 的命令行模式 - Manual
+以下是 PHP 二进制文件(即 php.exe 程序)提供的命令行模式的选项参数,随时...-e --profile-info 激活扩展信息模式,被用于调试/测试。 -f --file 解析并...
+https://php.net/manual/zh/feat...  - 百度快照
+ThinkPHP5 调试模式 - ThinkPHP框架
+2017年8月22日 - ThinkPHP5 调试模式浏览:2035 发布日期:2017/08/22 分类:ThinkPHP5专区 关键字: TP5 ThinkPHP5 配置 APP_DEBUG TP5 我在index.php里面定义了define("C...
+www.thinkphp.cn/topic/...  - 百度快照
+最简易的PHP Storm调试模式开启方式 - chenyangsocool - 博客园
+2019年4月1日 - 使用的是xdebug调试工具。其实真的很想吐槽php语言开启调试模式真的好麻烦。据说xdebug调试工具不支持php7.0以下版本,我同事的php5.6就不支持噗嗤。。...
+https://www.cnblogs.com/chenya...  - 百度快照
+Thinkphp5开启调试模式 - longgeaisisi的博客 - CSDN博客
+2018年5月19日 - 方法一、在application下面的配置文件config.php中把调试模式改为true 方法二、在应用的ROOT_PATH目录下面定义.env文件,并且定义APP_DEBUG配置参数用...
+CSDN - 百度快照
+php开启调试模式 – Sense's Blog
+2016年10月3日 - php开启调试模式如果服务器关闭了php服务的错误提示,而又需要对某个php文件进行调试,可以在文件中加入如下代码: ini_set('display_errors', true); er...
+https://blog.gdsyzx.edu.cn/sen...  - 百度快照
+ThinkPHP 调试模式_ThinkPHP教程
+2016年12月18日 - 调试功能一直伴随着系统的整个开发过程,开启调试模式能有效的检查
+  </p>
 </body>
 </html>
